# Batter-LImiter

./: .gitignore  CMakeLists.txt  README.md
config/: default.json
include/: event.h  logic.h  monitor.h
packaging/: install.sh  uninstall.sh
src/: event.cpp  logic.cpp  main.cpp  monitor.cpp  notify.cpp  sound.cpp
systemd/: battery-limiter.service
